dockerファイルを修正してapiを起動

--- a/corona-vaccine-api/docker-compose-local.yml
+++ b/corona-vaccine-api/docker-compose-local.yml
@@ -3,6 +3,8 @@ services:
   app:
     build: .
     ports:
-      - 8080:8000
+      - "8080:8080"
+    volumes:
+      - .:/app
     container_name: vaccine-fastapi
     command: ["python", "app.py"]
