--- a/corona-vaccine-api/Dockerfile
+++ b/corona-vaccine-api/Dockerfile
@@ -2,12 +2,12 @@ FROM python:3.9
 
 LABEL maintainer="Hidetomo Shimaoka <hidetomo0102@asst.jxpress.net>"
 
+ADD . ./
+
 # install
-COPY poetry.lock pyproject.toml ./
 RUN pip install poetry
 RUN poetry config virtualenvs.create false && poetry install
 
 # app
-ADD . ./
-EXPOSE 80
-RUN python app.py
+EXPOSE 8080
+CMD ["python", "app.py"]
